# Tally-Light-Pico

./: CMakeLists.txt  README.md  tally_light.c
